src/test/resources/syntactic/error/TC_ERROR_STRUCT_3.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 4 | COLUMNA 8 | SE ESPERABA: id Struct Y SE ENCONTRO: id variable o método |
struct a{

}